--- a/styles/main.scss
+++ b/styles/main.scss
@@ -222,6 +222,7 @@ body {
   padding-left: 35px;
   flex-direction: column;
   align-items: flex-start;
+  font-family: 'Open Sans', sans-serif;
 
   &__logo {
     margin-top: 60px;
